--- a/HighConcurrency/src/main/resources/jdbc.properties
+++ b/HighConcurrency/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://127.0.1.1:3306/seckill?useUnicode = true&characterEncoding=utf-8
 user=root
-password=Wb123456
+password=************
